$Id$

MIDIbox NG V1.031
~~~~~~~~~~~~~~~~~

   o MIDI clock input ports now disabled by default to avoid feedback loops
     in various setups

   o improved "ain_filter_delay_ms" implementation to support sensors (experimental stage)


MIDIbox NG V1.030
~~~~~~~~~~~~~~~~~

   o increased event pool size to 64k for MBHP_CORE_STM32F4

   o added ain_mode=Switch for AIN and AINSER events.
     Can be used if buttons are connected to analog inputs. The event will send the
     min value if a 30% threshold is reached, and the max value if a 70% threshold
     is reached.
     Schematic:  Ground |----o Button o-----> analog input + 10k Pull-Up resistor to 3.3V (AIN) resp. 5V (AINSER)

   o .ngr: added "change" command. It works similar to the "set" command, but
     only changes the value, and doesn't generate a MIDI event.

   o .ngr: added "set_min" and "set_max" command which allows to modify the
     min/max range of a EVENT

   o added new meta events to control the internal MIDI clock generator:
     MClkPlay, MClkStop, MClkPlayStop, MClkPause, MClkDecTempo, MClkIncTempo, MClkSetTempo.
     Example can be found under cfg/test/midiclk.ngc

   o added new string formatting items:
     %t to display MIDI clock state (Play/Stop)
     %T to display tempo (BPM)

   o added new MClk menu page to SCS to control the tempo w/o dedicated controllers

   o fixed AOUT_NG module communication issue if AINSER was used in addition

   o added new meta events:
       - CvPitchBend14Bit:<cv-channel>
       - CvPitchBend7Bit:<cv-channel>
       - CvPitchRange:<cv-channel>
       - CvTransposeOctave:<cv-channel>
       - CvTransposeSemitones:<cv-channel>
     see cfg/test/cvtransp.ngc for usage examples

   o BUTTON toggle function can now also handle with inverted and reduced value ranges


MIDIbox NG V1.029
~~~~~~~~~~~~~~~~~

   o added USB MIDI workaround for Windows

   o if a EVENT_SENDER is part of a radio group, and got a new value, it will only